objects/CSS_CampTsbTrp__c.object
<CustomObject>
    <fields>
        <fullName>CSS_Claims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Claims</label>
        <referenceTo>CSS_Claims__c</referenceTo>
        <relationshipName>CSS_CampTsbTrps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cu_Language__c</fullName>
        <description>Current user language.</description>
        <label>Cu Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>HYPERLINK(URL__c, &quot;Click here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QSOL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Num__c</fullName>
        <label>Doc Num</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Title__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <externalId>true</externalId>
        <label>ESN</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_ServiceJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSL ServiceJob</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Available TSBs</relationshipLabel>
        <relationshipName>CSS_CampTsbTrps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_URL__c</fullName>
        <label>FSL URL</label>
        <length>1310</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <label>Fault Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>QSOL campighns ,Tsb,Trp url file name .</description>
        <label>File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Num__c</fullName>
        <label>Group Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Order</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipName>CSS_CampTsbTrp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performed_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to Performed/Review</description>
        <inlineHelpText>Required to Performed/Review</inlineHelpText>
        <label>Performed Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technicain Check if Performed</description>
        <inlineHelpText>Technicain Check if Performed</inlineHelpText>
        <label>Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technician Check if reviewed</description>
        <inlineHelpText>Technician Check if reviewed</inlineHelpText>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <label>Symptoms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAM</fullName>
                </value>
                <value>
                    <fullName>TSB</fullName>
                </value>
                <value>
                    <fullName>TRP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TSB</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Doc_Title__c</columns>
        <columns>Job_Order__c</columns>
        <columns>Performed_Review__c</columns>
        <columns>URL__c</columns>
        <columns>ESN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>view_1</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Doc_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Order__c</field>
            <operation>equals</operation>
            <value>a093B000000mhUk</value>
        </filters>
        <label>view 1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TSBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_cannot_be_Edited</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; NOT( ISNEW() ) &amp;&amp; ISPICKVAL( Type__c , &quot;TSB&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name cannot be Edited</errorMessage>
    </validationRules>
</CustomObject>